# my-little-habitat

./: Cargo.toml  README.md  build  main.js  run
old/src/: main.rs
old/src/lib/: mod.rs
old/src/lib/grid/: gridcell.rs
old/src/lib/organisms/: cow.rs  mod.rs  plant.rs
old/src/ui/: mod.rs
src/: app.rs  grid.rs  lib.rs  main.rs  utils.rs
src/components/: canvas_grid.rs  mod.rs
src/creatures/: empty.rs  mod.rs  plant.rs
src/grid/: cell.rs  mod.rs
src/lib/: creatures.rs  grid.rs  gridcell.rs  mod.rs  selectionbox.rs  utils.rs
src/lib/creature/: cow.rs  deadplant.rs  empty.rs  ivy.rs  mod.rs  parasite.rs  plant.rs  snake.rs  vine.rs  virus.rs  wall.rs
src/lib/creatures/: empty.rs  mod.rs  plant.rs
src/lib/grid/: grid_manager.rs  gridcell.rs  mod.rs  neighbors.rs  turn_queue.rs
src/lib/gridcell/: mod.rs
src/lib/organisms/: empty.rs  mod.rs  plant.rs
src/plugins/: mod.rs  window_resize.rs
src/resources/: grid.rs  input_state.rs  mod.rs
src/systems/: input.rs  mod.rs  setup.rs  spawn.rs
src/ui/: selection_box.rs
src/utils/: mod.rs
