[package]
name = "my-little-habitat"
version = "0.1.0"
authors = ["Jordan Grace <jordan.t.grace@gmail.com>"]

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

[dependencies]
rand = "0.3"
piston = "0.32.0"
piston2d-graphics = "0.21.1"
pistoncore-glutin_window = "0.37.0"
piston2d-opengl_graphics = "0.44.0"
